[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Location.gd" type="Script" id=1]
[ext_resource path="res://Utilities/SolarSystem.tscn" type="PackedScene" id=2]
[ext_resource path="res://Utilities/ActivityMenu.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 149.013

[node name="Location" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1, -1 )
scale = Vector2( 0.464, -0.464 )
shape = SubResource( 1 )

[node name="SolarSystem" parent="." instance=ExtResource( 2 )]
scale = Vector2( 0.6, 0.6 )

[node name="ActivityMenu" parent="." instance=ExtResource( 3 )]

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
